Compucom CCQA/src/objects/FCST_Trigger__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account trigger is used to update CPM region on product model.</description>
        <label>Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCST_LineItem_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FCST LineItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCST_Opportunity_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FCST Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger to update revenue on product model</description>
        <label>Product Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>FCST Trigger</label>
</CustomObject>